enable multple time periods per day with different vacancies
